# local_stt

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  start.bat  start.ps1  start.sh
.claude/commands/: install-ios-app.md  vocab-add.md
backend/: audio_utils.py  benchmark_gemma.py  content_filter.py  gemini_stt.py  gemma4_stt.py  groq_stt.py  history.py  hotkey_client.py  main.py  openai_stt.py  platform_utils.py  pyproject.toml  replacements.json  replacements.json.example  replacements.py  settings.json  settings.py  stt_engine.py  test_resample.py  vocabulary.py  vocabulary.txt  vocabulary_usage.json  vocabulary_utils.py
backend/debug_audio/: TEST_PROTOCOL.md
backend/scripts/: recording_indicator.py
docs/: learnings.md  prd.md
frontend/: app.js  index.html  styles.css
ios/: Package.swift  project.yml
ios/LocalSTT.xcodeproj/: project.pbxproj
ios/Resources/: Info.plist
ios/Sources/LocalSTT/: AppState.swift  LocalSTTApp.swift
ios/Sources/LocalSTT/Services/: AudioRecorder.swift
ios/Sources/LocalSTT/Utilities/: Color+Hex.swift
ios/Sources/LocalSTT/Views/: HistoryListView.swift  LanguageBar.swift  RecordButton.swift  RecordingView.swift  ReplacementPanelView.swift  ResultCard.swift  SettingsView.swift  TranscriptionHistoryView.swift  VocabularyPanelView.swift  (+1 more)
ios/Sources/LocalSTTCore/: AudioNormalizer.swift  GroqService.swift  HallucinationFilter.swift  KeychainHelper.swift  ReplacementManager.swift  ReplacementRule.swift  SilencePadder.swift  TranscriptionResult.swift  VocabularyManager.swift  WAVEncoder.swift
ios/Tests/LocalSTTCoreTests/: GroqServiceTests.swift  HallucinationFilterTests.swift  ReplacementManagerTests.swift  TranscriptionResultTests.swift  VocabularyManagerTests.swift  WAVEncoderTests.swift
macos/: project.yml
macos/LocalSTTMac.xcodeproj/: project.pbxproj
macos/Resources/: Info.plist  vocabulary.txt  vocabulary_usage.json
macos/Sources/LocalSTTMac/: LocalSTTMacApp.swift  MacAppState.swift
reports/agent-team-2026-03-02/: README.md  RESEARCH-SUMMARY.md  TEAM-COORDINATION.md  _manifest.md  backend-analyst.md  ios-analyst.md  mac-architect.md
reports/agent-team-2026-03-03-ffm/: _manifest.md  code-analyst.md  console-investigator.md
scripts/: start-client.sh  start.sh
tests/: test_gemini_provider.py  test_gemini_stt.py  test_gemma4_provider.py
(+13 files in other folders)
