[project]
name = "local-stt"
version = "0.1.0"
description = "Local speech-to-text with faster-whisper"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "faster-whisper>=1.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
# Global hotkey client dependencies
client = [
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]
